--- a/proye.html
+++ b/proye.html
@@ -13,6 +13,7 @@
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadÃ­sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
             </div>
+            <div class="footer"> Hecho con Amor en platzi</div>
         </div>
     </body>
 </html>
