--- a/proye.html
+++ b/proye.html
@@ -12,6 +12,7 @@
                 </div>
                 <h1> Este es el titulo interesante</h1>
                 <p> Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
+                <p><img src="imagenes/equipo.jpg"></p>
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadÃ­sticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
             </div>
